infra/istio/manifests/prod/gateway.yml
################################
# Gateway (HTTP)
#################################
# CL=>80 => ALB => 30080 (NordPort) => 80 (TargetPort) => GW => Routing in Service Mesh (VS of GW)
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"
